# ChangeLog for net-print/cups
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.408 2011/04/30 15:39:44 scarabeus Exp $

*cups-1.4.6-r1 (30 Apr 2011)

  30 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -cups-1.4.6.ebuild,
  +cups-1.4.6-r1.ebuild, +files/cups-1.4.6-web-hang.patch:
  Revision bump to fix few bugs reported on bugzilla. Wrong libgcrypt
  dependency and cgi hangup.

  30 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> cups-1.3.11-r4.ebuild:
  Just enforce cups useflag to be enabled on ghostscript.cd
  /home/scarab/gentoo/gentoo-x86/net-print/cups

  07 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org> cups-1.4.6.ebuild:
  QA: only try to set up active python version when python USE flag is enabled.

  19 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> cups-1.3.11-r4.ebuild,
  cups-1.4.6.ebuild:
  Move virtual/lpr to new-style virtual.

  28 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> cups-1.3.11-r4.ebuild:
  Use virtual/jpeg.

*cups-1.4.6 (13 Jan 2011)

  13 Jan 2011; Timo Gurr <tgurr@gentoo.org> -cups-1.4.4-r2.ebuild,
  -cups-1.4.5.ebuild, +cups-1.4.6.ebuild, +files/cups-1.4.6-force-gnutls.patch,
  +files/cups-1.4.6-serialize-gnutls.patch:
  Version bump, fixing bug #313555 and #350406. Remove old.

*cups-1.3.11-r4 (01 Dec 2010)

  01 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> -cups-1.3.11-r2.ebuild,
  -cups-1.3.11-r3.ebuild, +cups-1.3.11-r4.ebuild,
  +files/cups-1.3.11-pdf-m4.patch:
  Revision bump (directly stable) to fix nasty issue with pstopdf buildtime
  requirement (only changed the m4 to work properly).

*cups-1.4.5 (01 Dec 2010)

  01 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> +cups-1.4.5.ebuild:
  Version bump

*cups-1.3.11-r3 (12 Nov 2010)

  12 Nov 2010; Raúl Porcel <armin76@gentoo.org> -cups-1.3.11-r1.ebuild,
  +cups-1.3.11-r3.ebuild:
  Fix super annoying bug 309901

  12 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> cups-1.4.4-r2.ebuild,