@@ -23,13 +23,13 @@ AUX pdftops-1.20.gentoo 10412 RMD160 16e229662c47e03af1d1f4cb5764a76d17a66642 SH
 DIST cups-1.3.11-source.tar.bz2 3799393 RMD160 a0646f2ba29fbd39d211ea5c3fdbd24a00f66a78 SHA1 df5cfb64fb608fc128acadde670dc30af49bdb18 SHA256 5e310fd324a15fae1e1c9721879f5c948d788e04735a5263a40c6146fff607b8
 DIST cups-1.4.6-source.tar.bz2 4517061 RMD160 94c9921e03f5ec52d9c16947435622365f53aef6 SHA1 42fb1ca00ee7291561564d3072716eb2045f05d1 SHA256 f08711702a77b52c7150f96fe1f45482f6151cb95ef601268c528607fe6ad514
 EBUILD cups-1.3.11-r4.ebuild 8157 RMD160 8a87f90b96c08a694643df5324e7daab651daed2 SHA1 f1f3d811c3bc989046cca5981a98d3a7e47e22fc SHA256 40fd91ccb98b69279919e10c46a286ae04b839ac77c0b074a8973f0313616d7b
-EBUILD cups-1.4.6-r1.ebuild 6349 RMD160 5631df63dac50c6285004a6b47a05e24473c6be7 SHA1 fc1b8762bc9a4147bbfa026306f4c7c821edf07e SHA256 5def3cc030593055a24b51e86d4e3afc262d27b3c77c18db2861491bad9cb003
-MISC ChangeLog 61213 RMD160 0a04d7b0e95913609fb8a9db8e9240b9e89c3617 SHA1 6508cfbbe91eb6d926d1d03d81e8728e756e243a SHA256 e16fa8133b646acb6dc5cb554091f30123f592f51df65d32f39cda3b9ba3e06e
+EBUILD cups-1.4.6-r1.ebuild 6802 RMD160 ec5dfd8528b29c8fd054550928b74d962b2f25f7 SHA1 f7b008e8502c6be5761903cbb3c049aab6f8832e SHA256 ba3456914c059c033b75759d6089778469c241f1c8a0414b12a4fecb4d61313a
+MISC ChangeLog 61357 RMD160 ebf48fcca9b4cc4f0141aee6c13fe2a64009bc9e SHA1 8f54912974d0f70f1669e928f9490c2bf5b560a1 SHA256 ddcb19e370ddc775c083000c39fb33bc54586d47f0bcd9849ba650b8d0bf6308
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk28LS4ACgkQHB6c3gNBRYfRngCcCnecYmv/9sLpYmCLDThmLX4i
-HiUAnjyV2tCykOZpXMkCxLMfAjQGp/CA
-=ZHhu
+iEYEARECAAYFAk28L8kACgkQHB6c3gNBRYch+QCfdlFs197MiF+UuM/HmF27TcNd
+YkIAoKax9q1x3CVN3r8W78i8Yp06sDAb
+=p42l
 -----END PGP SIGNATURE-----
